# Enemy-Territory

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt
src/botai/: ai_cmd.c  ai_cmd.h  ai_distances.h  ai_dmgoal_mp.c  ai_dmgoal_mp.h  ai_dmnet_mp.c  ai_dmnet_mp.h  ai_dmq3.c  ai_dmq3.h  ai_func_decs.h  ai_funcs.h  ai_main.c  ai_main.h  ai_matrix.h  ai_script.c  ai_script_actions.c  ai_team.c  ai_team.h  botai.h  chars.h  inv.h  match.h  syn.h
src/botlib/: aasfile.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_routetable.c  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_interface.c  be_interface.h  (+17 more)
src/bspc/: _files.c  aas_areamerging.c  aas_areamerging.h  aas_cfg.c  aas_cfg.h  aas_create.c  aas_create.h  aas_edgemelting.c  aas_edgemelting.h  aas_facemerging.c  aas_facemerging.h  aas_file.c  aas_file.h  aas_gsubdiv.c  aas_gsubdiv.h  aas_map.c  aas_map.h  aas_prunenodes.c  aas_prunenodes.h  aas_store.c  aas_store.h  be_aas_bspc.c  be_aas_bspc.h  brushbsp.c  bspc.c  csg.c  faces.c  glfile.c  l_bsp_ent.c  l_bsp_ent.h  l_bsp_q1.c  l_bsp_q1.h  l_bsp_q2.c  l_bsp_q2.h  l_bsp_q3.c  l_bsp_q3.h  (+35 more)
(+307 files in other folders)
